fixed geolocation error handling, fixed SELECT on mobile, styled search results on mobile

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,10 +1,23 @@
-.link {
-  display: flex;
+.item {
   margin-bottom: 1rem;
+
+  @media (min-width: 1200px) {
+    flex: 1 1 calc(50% - 2 * 0.7rem);
+    margin: 0 0.7rem 1rem 0.7rem;
+  }
+}
+
+.link {
+  display: block;
+
   padding: 0.2rem;
   box-shadow: 0 0 15px #999;
-  border-radius: 5px;
+  border-radius: 10px;
   transition: opacity 0.25s, border-color 0.25s;
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
 
   &:link,
   &:visited {
@@ -21,13 +34,25 @@
 }
 
 .top {
-  display: flex;
+  // display: flex;
+  padding: 1rem 0.5rem;
 
-  &Texts {
-    padding-left: 1rem;
+  @media (min-width: 576px) {
+    display: flex;
+    padding: 1rem;
+  }
+
+  &Thumb {
+    text-align: center;
   }
 
   &Img {
-    // border-radius: 5px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+  }
+
+  &Texts {
+    padding-left: 1rem;
   }
 }
