--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -33,7 +33,8 @@
     padding: 0.4rem;
     height: 40px;
     width: 100%;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    background-color: rgba(255, 255, 255, 0.9);
 
     &Location {
       border-radius: 0 5px 5px 0;
@@ -47,7 +48,7 @@
   padding: 4px;
   width: 40px;
   height: 40px;
-  background: #fff;
+  background-color: rgba(255, 255, 255, 0.9);
   border: solid 1px transparent;
   border-radius: 5px 0 0 5px;
   color: #3464b1;
