--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -3,4 +3,5 @@
   width: 100%;
   height: 30px;
   font-size: 0.8rem;
+  background-color: rgba(255, 255, 255, 0.9);
 }
